<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.id22.movieapp.presentation.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_to_detail_movie"
            app:destination="@id/nav_detail" />
        <action
            android:id="@+id/action_to_about"
            app:destination="@id/nav_about" />
        <action
            android:id="@+id/action_to_now_playing"
            app:destination="@id/nav_now_playing" />
        <action
            android:id="@+id/action_to_popular"
            app:destination="@id/nav_popular" />
        <action
            android:id="@+id/action_to_top_rated"
            app:destination="@id/nav_top_rated" />
        <action
            android:id="@+id/action_to_favorite"
            app:destination="@+id/nav_favorite" />
        <action
            android:id="@+id/action_to_search"
            app:destination="@+id/nav_search" />
    </fragment>

    <fragment
        android:id="@+id/nav_detail"
        android:name="com.id22.movieapp.presentation.detail.DetailFragment"
        android:label="@string/menu_detail"
        tools:layout="@layout/fragment_detail">
        <action
            android:id="@+id/action_to_detail"
            app:destination="@id/nav_detail" />
        <argument
            android:name="movie"
            android:defaultValue="@null"
            app:argType="com.id22.core.domain.model.Movie"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.id22.movieapp.presentation.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_now_playing"
        android:name="com.id22.movieapp.presentation.movie.NowPlayingFragment"
        android:label="@string/menu_now_playing"
        tools:layout="@layout/fragment_now_playing">
        <action
            android:id="@+id/action_to_detail_movie"
            app:destination="@id/nav_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_popular"
        android:name="com.id22.movieapp.presentation.movie.PopularFragment"
        android:label="@string/menu_popular"
        tools:layout="@layout/fragment_popular">
        <action
            android:id="@+id/action_to_detail_movie"
            app:destination="@id/nav_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_top_rated"
        android:name="com.id22.movieapp.presentation.movie.TopRatedFragment"
        android:label="@string/menu_top_rated"
        tools:layout="@layout/fragment_top_rated">
        <action
            android:id="@+id/action_to_detail_movie"
            app:destination="@id/nav_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.id22.movieapp.presentation.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_to_detail_movie"
            app:destination="@id/nav_detail" />
    </fragment>

    <include-dynamic
        android:id="@+id/nav_favorite"
        app:graphPackage="${applicationId}.favorite"
        app:graphResName="favorite_navigation"
        app:moduleName="favorite" />

</navigation>